# QuranReader

./: .gitignore  README.md  io.github.hihebark.QuranReader.yml  meson.build
data/: io.github.hihebark.QuranReader.desktop  io.github.hihebark.QuranReader.metainfo.xml  meson.build  mushaf-qatar-layout.db  quran-text.db
scripts/: build_text_db.py
src/: main.py  meson.build  quran-reader.in
src/quran_reader/: constants.py  db.py  window.py
